# image-augment-ecg

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md
phototrace/: __init__.py  data.py  digitize_data.py  domain_gap.py  geometry.py  infer.py  losses.py  metrics.py  models.py  pipeline.py  postprocess.py  train_digitize.py  train_geometry.py
physiorender/: __init__.py  assemble.py  calibration.py  cli.py  config.py  dataset_gen.py  logging_setup.py  metadata.py  params.py  sampling.py
physiorender/degrade/: __init__.py  background.py  engine.py  imageutil.py  layer1_paper.py  layer2_handling.py  layer3_camera.py  layer4_lighting.py  layer5_capture.py  light.py  noise.py  warp.py
physiorender/ingest/: __init__.py  base.py  cardiology_xml.py  formats.py  generic.py  record.py  validate.py  wfdb_reader.py
physiorender/render/: __init__.py  layout.py  renderer.py  style.py
scripts/: augment.py  augment_image.py  batch_convert.py  before_after.py  generate_dataset.py  inspect_ecg.py  make_test_inputs.py  render_ecg.py  train_phototrace.py  visual_test_degrade.py
tests/: conftest.py  test_capture.py  test_degrade.py  test_ingest.py  test_metadata.py  test_params.py  test_phase8.py  test_phototrace_digitize.py  test_phototrace_geometry.py  test_render.py  test_sampling.py  test_smoke.py
